tests/typing/bad/testfile-field-7.c

struct S { int a; };
void foo() {}
int main() { (foo()).a; }

